feat: добавлен метод для создания отзывов
